[gd_scene load_steps=6 format=3 uid="uid://dyd4f6kdj3rfm"]

[ext_resource type="Texture2D" uid="uid://b5myux3rwhumk" path="res://Assets/testapartment.png" id="1_6q334"]
[ext_resource type="Script" path="res://Scripts/unit_1a.gd" id="1_vl3o6"]
[ext_resource type="Texture2D" uid="uid://dplyrj251pg0m" path="res://Assets/door.png" id="3_wgj1v"]
[ext_resource type="AudioStream" uid="uid://bdcyc7vstai0l" path="res://Audio/door-open-pixabay.mp3" id="4_vsjtr"]
[ext_resource type="AudioStream" uid="uid://dcuagxuy0tw33" path="res://Audio/door-close-pixabay.mp3" id="5_t1lc6"]

[node name="Unit1A" type="Node2D"]
script = ExtResource("1_vl3o6")

[node name="UnitSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_6q334")
centered = false

[node name="DoorSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(804, 111)
texture = ExtResource("3_wgj1v")

[node name="DoorOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vsjtr")
volume_db = 6.0

[node name="DoorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t1lc6")
volume_db = 4.0
